added cntk py file

--- a/CNTK103_MNIST.ipynb
+++ b/CNTK103_MNIST.ipynb
@@ -1156,7 +1156,7 @@
     "                                  strides=(1,1),\n",
     "                                  pad=True, name='first_conv')(h)\n",
     "        h = C.layers.MaxPooling(filter_shape=(2,2),\n",
-    "                               strides=(2,2), name='fist_max')(h)\n",
+    "                               strides=(2,2), name='fisrt_max')(h)\n",
     "        h = C.layers.Convolution2D(filter_shape=(5,5),\n",
     "                                 num_filters=16,\n",
     "                                 strides=(1,1),\n",
